# ComfyUI-StoryMaker

./: README.md  nodes.py  pyproject.toml  requirements.txt
StoryMaker/: pipeline_sdxl_storymaker.py
workflows/: workflow.json
