[project]
name = "comfyui-storymaker"
description = "NODES:StoryMakerSinglePortraitNode, StoryMakerTwoPortraitNode, StoryMakerSwapClothNode."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["insightface", "opencv-python"]

[project.urls]
Repository = "https://github.com/tanglaoya321/ComfyUI-StoryMaker"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-StoryMaker"
Icon = ""
